--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -6,7 +6,7 @@ env:
   - variable: NEXT_PUBLIC_FIREBASE_API_KEY
     value: "AIzaSyB6RymaYwxixfGIXvLarNzDeF5NI7XncYc"
   - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
-    value: "forgeai--studio-774665260-80d2e.europe-west4.hosted.app"
+    value: "studio-774665260-80d2e.web.app"
   - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
     value: "studio-774665260-80d2e"
   - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
