feat: Re-enable secret after granting IAM permissions

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -19,9 +19,7 @@ env:
   # Server-side (secret) variables
   # This is needed for the Firebase Admin SDK
   - variable: FIREBASE_SERVICE_ACCOUNT_KEY
-    # Temporarily disable the secret to allow the service account to be created.
-    # secret: FIREBASE_SERVICE_ACCOUNT_KEY
-    value: "TEMPORARILY_DISABLED"
+    secret: FIREBASE_SERVICE_ACCOUNT_KEY
 
 # The command to build your app
 build:
@@ -36,6 +34,4 @@ staticAssets:
   - path: '.next/static'
 
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
   maxInstances: 1
