--- a/firebase.json
+++ b/firebase.json
@@ -1,22 +1,24 @@
 {
   "functions": {
-    "source": "functions"
+    "source": "functions",
+    "location": "us-east1",
+    "storageBucket": "studio-774665260-80d2e.appspot.com"
   },
   "storage": {
     "rules": "storage.rules"
   },
   "emulators": {
     "functions": {
-      "host": "0.0.0.0"
+      "host": "127.0.0.1"
     },
     "storage": {
-      "host": "0.0.0.0"
+      "host": "127.0.0.1"
     },
     "ui": {
-      "host": "0.0.0.0"
+      "host": "127.0.0.1"
     },
     "hub": {
-      "host": "0.0.0.0"
+      "host": "127.0.0.1"
     }
   }
 }
