--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "build": "tsc",
-    "serve": "firebase emulators:start --only functions,storage",
+    "serve": "npm run build && firebase emulators:start --only functions,storage",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -14,10 +14,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@genkit-ai/ai": "latest",
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^6.4.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "@types/pdf-parse": "^1.1.4",
     "typescript": "^5.0.0"
   },
   "private": true
