--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,26 @@
 {
-  "functions": {
-    "source": "functions",
-    "location": "us-east1"
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
+    }
+  ],
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "frameworksBackend": {
+      "region": "us-east1"
+    }
   },
   "storage": {
     "rules": "storage.rules"
