--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AI_NURTURE_NEXUS }}'
           channelId: live
           projectId: studio-774665260-80d2e
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
