--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -15,3 +15,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AI_NURTURE_NEXUS }}'
           projectId: studio-774665260-80d2e
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
