--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -1,25 +1,13 @@
 name: Deploy to App Hosting
-
 on:
   push:
     branches:
       - main
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: 'actions/checkout@v4'
-
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v2'
-        with:
-          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
-          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
-
-      - name: 'Deploy to App Hosting'
-        uses: 'google-github-actions/deploy-app-hosting@main'
-        with:
-          project_id: 'studio-774665260-80d2e'
-          location: 'europe-west4'
+      - name: A simple step to see if workflow runs
+        run: echo "The basic workflow ran successfully."
