--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - main
+
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -11,10 +16,16 @@ jobs:
         uses: 'actions/checkout@v4'
 
       - id: 'auth'
+        name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v2'
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-      - name: Check Auth Action
-        run: echo "Auth action was successfully resolved."
+      - id: 'deploy'
+        name: 'Deploy to App Hosting'
+        uses: 'google-github-actions/deploy-app-hosting@v2'
+        with:
+          project_id: '${{ secrets.PROJECT_ID }}'
+          site_id: 'forgeai'
+          location: 'europe-west4'
