--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -17,10 +17,15 @@ jobs:
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v2.1.3' # Versión fijada
+        uses: 'google-github-actions/auth@v2.1.3'
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
-      
-      - name: Auth check
-        run: echo "Authentication step completed successfully."
+
+      - id: 'deploy'
+        name: 'Deploy to App Hosting'
+        uses: 'google-github-actions/deploy-app-hosting@v2.0.0'
+        with:
+          project_id: '${{ secrets.PROJECT_ID }}'
+          site_id: 'forgeai'
+          location: 'europe-west4'
