--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -22,9 +22,8 @@ jobs:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-      - id: 'deploy'
-        name: 'Deploy to App Hosting'
-        uses: 'google-github-actions/deploy-app-hosting@v2'
-        with:
-          site_id: 'forgeai'
-          location: 'europe-west4'
+      - name: 'Install gcloud CLI'
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: 'Deploy to App Hosting with gcloud'
+        run: gcloud app hosting backends deploy forgeai-backend --location=europe-west4
