fix(workflow): remove component installation step

--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -22,10 +22,8 @@ jobs:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-      - name: 'Install gcloud CLI and App Hosting component'
+      - name: 'Install gcloud CLI'
         uses: 'google-github-actions/setup-gcloud@v2'
-        with:
-          install_components: 'app-hosting'
 
       - name: 'Deploy to App Hosting with gcloud'
         run: gcloud beta app hosting backends deploy forgeai-backend --location=europe-west4
