--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -27,5 +27,13 @@ jobs:
         with:
           install_components: 'beta'
 
-      - name: 'Deploy to App Hosting with gcloud'
-        run: gcloud beta app hosting backends deploy forgeai-backend --location=europe-west4
+      - name: 'Diagnose available gcloud commands'
+        run: |
+          echo "====================================="
+          echo "Running 'gcloud beta --help'"
+          echo "====================================="
+          gcloud beta --help
+          echo "====================================="
+          echo "Running 'gcloud beta app --help'"
+          echo "====================================="
+          gcloud beta app --help
