--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -27,13 +27,9 @@ jobs:
         with:
           install_components: 'beta'
 
-      - name: 'Diagnose available gcloud commands'
+      - name: 'Diagnose available Firebase commands'
         run: |
           echo "====================================="
-          echo "Running 'gcloud beta --help'"
+          echo "Running 'gcloud beta firebase --help'"
           echo "====================================="
-          gcloud beta --help
-          echo "====================================="
-          echo "Running 'gcloud beta app --help'"
-          echo "====================================="
-          gcloud beta app --help
+          gcloud beta firebase --help
