--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -22,14 +22,9 @@ jobs:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
-      - name: 'Install gcloud CLI and beta component'
-        uses: 'google-github-actions/setup-gcloud@v2'
-        with:
-          install_components: 'beta'
+      - name: 'Install Firebase CLI'
+        run: npm install -g firebase-tools
 
-      - name: 'Diagnose available Firebase commands'
+      - name: 'Deploy to Firebase App Hosting'
         run: |
-          echo "====================================="
-          echo "Running 'gcloud beta firebase --help'"
-          echo "====================================="
-          gcloud beta firebase --help
+          firebase apphosting:backends:deploy forgeai-backend --location=europe-west4 --project=${{ secrets.GCP_PROJECT_ID }}
