--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -26,5 +26,4 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: 'Deploy to Firebase App Hosting'
-        run: |
-          firebase apphosting:backends:deploy forgeai-backend --location=europe-west4 --project=${{ secrets.GCP_PROJECT_ID }}
+        run: firebase apphosting:backends:deploy forgeai-backend
