--- a/.github/workflows/deploy-app-hosting.yml
+++ b/.github/workflows/deploy-app-hosting.yml
@@ -26,4 +26,4 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: 'Deploy to Firebase App Hosting'
-        run: firebase apphosting:rollouts:create forgeai-backend --git-branch ${{ github.ref_name }} --project studio-774665260-80d2e
+        run: firebase apphosting:rollouts:create forgeai --git-branch ${{ github.ref_name }} --project studio-774665260-80d2e
